--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -20,4 +20,4 @@ jobs:
         with:
           name: My-Artifacts
           path: |
-            target
+            target/spring-boot-initial-0.0.1-SNAPSHOT.jar
