--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -21,3 +21,15 @@ jobs:
           name: My-Artifacts
           path: |
             target/spring-boot-initial-0.0.1-SNAPSHOT.jar
+  Deploy:
+        runs-on: ubuntu-latest
+        steps:
+          - name: Downloading the artifacts
+            uses: actions/download-artifact@v4
+            with:
+                name: My-Artifacts
+          - name: Checking the Directory
+            run: ls
+          - name: Deploy the artifacts
+            run: echo "Deploy the artifacts"
+         
