--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -22,6 +22,7 @@ jobs:
           path: |
             target/spring-boot-initial-0.0.1-SNAPSHOT.jar
   Deploy:
+        needs: Build
         runs-on: ubuntu-latest
         steps:
           - name: Downloading the artifacts
